app/postdetails/[slug]/postDetails.css
div.paragraph p {
  font-family: Arial;
  font-size: 16px;
  color: grey;
  margin-top: 32px;
}

#headingOne {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 2.5rem;
}

/* CSS */
div.atag a {
  display: block;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  --tw-bg-opacity: 1;
  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 600;
  border-radius: 0.375rem;
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  --tw-shadow-color: rgb(99 102 241 / 0.5);
  --tw-shadow: var(--tw-shadow-colored);
  margin-top: 16px;
}

div.atag a:focus:not(:focus-visible):not(.focus-visible) {
  box-shadow: none;
  outline: none;
}

div.atag a:focus {
  box-shadow: rgba(46, 164, 79, 0.4) 0 0 0 3px;
  outline: none;
}

a:disabled {
  background-color: #94d3a2;
  border-color: rgba(27, 31, 35, 0.1);
  color: rgba(255, 255, 255, 0.8);
  cursor: default;
}

a:active {
  background-color: #298e46;
  box-shadow: rgba(20, 70, 32, 0.2) 0 1px 0 inset;
}

iframe {
  margin-top: 15px;
  margin-bottom: 15px;
  width: 100%;
  height: 40vh;
  box-sizing: border-box;
}

.box-video.open .video-container {
  opacity: 1;
  -webkit-transition: all 0.6s 0.8s;
  transition: all 0.6s 0.8s;
}

@media only screen and (max-device-width: 640px) {
  iframe {
    height: 56.25vw;
  }
}

.pdf-container {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

object, .pdfIframe{
  height: 85vh;
  width: 100%;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

iframe[title="PDF Viewer"]{
  height: 85vh;
  width: 100%;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.no-download {
  user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.no-download img,
.no-download video,
.no-download a[download] {
  pointer-events: none;
}

.no-download iframe {
  pointer-events: auto;
}

